EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/18/2011==
Leere: Removed lore item from the restrictions for pick pocket.

==08/13/2011==
Derision: Player pets will now show their owners name. UF users can turn this off in options.
Derision: SoD/UF: Beneficial Pet Buffs can be clicked off in the Pet Window.
Derision: Underfoot: Can now click off buffs in the short buff box. Removed registraion of HoT in patches.cpp

==08/12/2011==
Bad_Captain: Fixed double class / race stats for bots.

==08/09/2011==
Derision: Underfoot: OP_ClearSurname

==08/05/2011==
Akkadius: Corrected a grammatical error with training disciplines.

==08/04/2011==
Bad_Captain: Updated Bot::MeleeMitigation to match mob version.

==08/02/2011==
Trevius: (Akkadius) Exported Freeze() and UnFreeze() to Perl Client.

==07/27/2011==
Caryatis: Added Special Attack 'p' (Makes mob immune to pacify)
Caryatis: Added Special Attack 'j' (Tether - returns mob to spawn point if its distance away from spawn point is greater than its aggro range)
Caryatis: Added Special Attack 'J' (Leash - same as Tether except heals mob to full, strips all buffs and wipes the hatelist as well)
Caryatis: Fixed TGB(if you cast a group buff with a corpse or an npc thats not a client's pet as target, it will use your group instead)

==07/26/2011==
Congdar: redo world container check

==07/24/2011==
Caryatis: Added support for higher level invis and see invis(eg Ethereal Invisibility & Skylight Sagacity)
Congdar: update check to world containers

==07/23/2011==
Congdar: (Criimson)Bot dyes (and tweaks)
Congdar: (lerxst2112)Bot dyes (and tweaks)
Bad_Captain: Fixed Bot GetAC() and GetATK() to work with #ShowStats

==07/22/2011==
Congdar: update check for Lore

==07/17/2011==
Congdar: (pfyon, Criimson)Various bot tweaks
Caryatis: Updated My/Showstats window.
        
Required SQL: 
utils/sql/svn/1974_required_bot_spells_update

==07/16/2011==