@@ -23,6 +23,7 @@ E(OP_WearChange)
 E(OP_Action)
 E(OP_BecomeTrader)
 E(OP_PetBuffWindow)
+E(OP_OnLevelMessage)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
