@@ -59,6 +59,7 @@ E(OP_DzLeaderStatus)
 E(OP_DzJoinExpeditionConfirm)
 E(OP_BecomeTrader)
 E(OP_PetBuffWindow)
+E(OP_OnLevelMessage)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
